--- a/styles/KeyboardDisplay.module.css
+++ b/styles/KeyboardDisplay.module.css
@@ -1,20 +1,29 @@
 .keyboardDisplayContainer {
     border: solid 1px black;
     display: grid;
-    grid-template-columns: repeat(12,2rem);
+    grid-template-columns: repeat(12,3rem);
     gap: 10px;
+    font-size: 2rem;
+    justify-content: center;
+    padding: 1rem;
+    /* border-radius: 5px; */
+    margin: 1rem;
+    box-shadow: 10px 10px 0 black;
     /* grid-template-columns: repeat(10, 1fr) repeat(9, 1fr) repeat(7, 1fr); */
+    background-color: rgb(245, 245, 245);
 
 }
 
 .key {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     border: solid 1px black;
+    background-color:rgb(228, 224, 220);
     border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 4px 4px 2px black;
 }
 
 /* Space bar */
@@ -24,11 +33,17 @@
     border: solid 1px black;
 }
 .selectedKey {
-    background-color: red;
-    color: white;
+    background-color: rgb(175, 184, 187);
+    /* color: white; */
+    box-shadow: none;
 }
 
 .emptyKey {
     background-color: lightgray;
     border: none;
+}
+
+.highlightKey {
+    background-color: yellow;;
+    border: solid 2px yellow;
 }
