--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,16 @@
 .mainContainer {
+  max-width: 1000px;
+  margin: 0 auto;
+}
 
+.introSection {
+  padding: 1rem;
+}
+
+.introSection h1 {
+  margin: 1rem 0;
+}
+
+.introSection p {
+  font-size: 1.5rem;
 }
