--- a/styles/TypingStats.module.css
+++ b/styles/TypingStats.module.css
@@ -1,5 +1,11 @@
 .typingStatsContainer {
     border: solid 1px black;
+    border-radius: 5px;
+    margin: 1rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
 }
 
 .typingStatsItem {
