--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,8 @@
 .mainContainer {
   max-width: 1000px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .introSection {
@@ -13,4 +15,13 @@
 
 .introSection p {
   font-size: 1.5rem;
+}
+
+.tryAgainButton {
+  font-family: inherit;
+  font-size: 1.5rem;
+  padding: 0.25rem 1rem;
+  display: inline-block;
+  width: max-content;
+  align-self: center;
 }
