--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -12,3 +12,26 @@ body {
   background-color: white;
 }
 
+.no-mobile {
+  display: none;
+}
+
+@media (max-width: 500px) {
+  .no-mobile {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+  }
+
+  .no-mobile a,
+  .no-mobile a:visited {
+    color: lightslategray;
+    text-decoration: none;
+  }
+}
